--- a/src/main/resources/fxml/loginFrame.fxml
+++ b/src/main/resources/fxml/loginFrame.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.LoginFrameController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.LoginFrameController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+    <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
       <ColumnConstraints hgrow="SOMETIMES" percentWidth="80.0" />
-    <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+    <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints percentHeight="30.0" vgrow="SOMETIMES" />
@@ -22,7 +22,7 @@
    <children>
       <GridPane GridPane.columnIndex="1">
         <columnConstraints>
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="100.0" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints percentHeight="70.0" vgrow="SOMETIMES" />
@@ -34,8 +34,8 @@
       </GridPane>
       <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
         <columnConstraints>
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="50.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="50.0" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="50.0" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="50.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
