--- a/src/main/resources/fxml/shotFrame.fxml
+++ b/src/main/resources/fxml/shotFrame.fxml
@@ -10,7 +10,7 @@
 <BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.ShotFrameController">
    <center>
 
-      <ImageView fx:id="shotView" onMouseClicked="#shotFrameClicked" onKeyPressed="#triggerShot" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+      <ImageView fx:id="shotView" onMouseClicked="#shotFrameClicked"  pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
             <Image url="@/images/noimage.png" />
          </image></ImageView>
