--- a/src/main/resources/fxml/loginFrame.fxml
+++ b/src/main/resources/fxml/loginFrame.fxml
@@ -1,58 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openbooth.gui.LoginFrameController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
-      <ColumnConstraints hgrow="SOMETIMES" percentWidth="80.0" />
-    <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints percentHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints percentHeight="50.0" vgrow="SOMETIMES" />
-    <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.LoginFrame">
    <children>
-      <GridPane GridPane.columnIndex="1">
+      <GridPane layoutY="2.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0">
         <columnConstraints>
-          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="100.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints percentHeight="70.0" vgrow="SOMETIMES" />
-          <RowConstraints percentHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints percentHeight="25.0" vgrow="SOMETIMES" />
+          <RowConstraints percentHeight="22.5" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="5.0" vgrow="SOMETIMES" />
+          <RowConstraints percentHeight="22.5" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="27.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="title" text="Geben Sie Benutzername und Passwort ein" GridPane.rowIndex="1" />
-         </children>
-      </GridPane>
-      <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
-        <columnConstraints>
-          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="50.0" />
-          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="50.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
-            <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
-          <RowConstraints percentHeight="20.0" valignment="BOTTOM" vgrow="SOMETIMES" />
-          <RowConstraints percentHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Benutzername" GridPane.rowIndex="1" />
-            <Label text="Passwort" GridPane.rowIndex="2" />
-            <TextField fx:id="adminField" onKeyReleased="#onEnter" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <PasswordField fx:id="passwordField" onKeyReleased="#onEnter" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label fx:id="wrongCredentialsLabel" text="Benutzername oder Passwort falsch" textFill="RED" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Button mnemonicParsing="false" onAction="#checkLogin" onKeyReleased="#onEnter" text="Bestätigen" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Button mnemonicParsing="false" onAction="#closeLogin" text="Abbrechen" GridPane.rowIndex="4" />
+            <GridPane GridPane.rowIndex="4">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="33.3" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="33.3" />
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="33.3" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
+                <RowConstraints percentHeight="80.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <GridPane GridPane.columnIndex="2" GridPane.rowIndex="1">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" percentWidth="70.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Button id="b_confirm" fx:id="b_confirm" mnemonicParsing="false" onAction="#onConfirmPressed" onMouseClicked="#onConfurmPressed" onTouchPressed="#onConfurmTouched" style="-fx-background-image: url('/images/trashcan.png'); visibility: false;" GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
+               </children>
+            </GridPane>
+            <GridPane GridPane.rowIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="80.0" />
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+              </columnConstraints>
+               <children>
+                  <TextField id="tf_name" fx:id="tf_name" onKeyReleased="#onEnter" promptText="Name" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </TextField>
+               </children>
+               <rowConstraints>
+                  <RowConstraints percentHeight="0.0" />
+                  <RowConstraints percentHeight="100.0" />
+               </rowConstraints>
+            </GridPane>
+            <GridPane GridPane.rowIndex="3">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="80.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+               </columnConstraints>
+               <children>
+                  <TextField id="tf_password" fx:id="tf_password" onKeyReleased="#onEnter" promptText="Passwort" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </TextField>
+               </children>
+               <rowConstraints>
+                  <RowConstraints percentHeight="0.0" />
+                  <RowConstraints percentHeight="100.0" />
+               </rowConstraints>
+            </GridPane>
          </children>
       </GridPane>
    </children>
-</GridPane>
+</AnchorPane>
