--- a/src/main/resources/fxml/loginFrame.fxml
+++ b/src/main/resources/fxml/loginFrame.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -8,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.LoginFrame">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openbooth.gui.LoginFrameController">
    <children>
       <GridPane layoutY="2.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0">
         <columnConstraints>
@@ -43,7 +44,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button id="b_confirm" fx:id="b_confirm" mnemonicParsing="false" onAction="#onConfirmPressed" onMouseClicked="#onConfurmPressed" onTouchPressed="#onConfurmTouched" style="-fx-background-image: url('/images/trashcan.png'); visibility: false;" GridPane.columnIndex="1" />
+                        <Button fx:id="b_confirm" mnemonicParsing="false" onAction="#onConfirmPressed" style="-fx-background-image: url('/images/trashcan.png'); visibility: false;" GridPane.columnIndex="1" />
                      </children>
                   </GridPane>
                </children>
@@ -55,7 +56,7 @@
                 <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
               </columnConstraints>
                <children>
-                  <TextField id="tf_name" fx:id="tf_name" onKeyReleased="#onEnter" promptText="Name" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <TextField fx:id="tf_name" onKeyReleased="#onEnterName" promptText="Name" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -73,11 +74,11 @@
                   <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
                </columnConstraints>
                <children>
-                  <TextField id="tf_password" fx:id="tf_password" onKeyReleased="#onEnter" promptText="Passwort" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <PasswordField fx:id="tf_password" onKeyReleased="#onEnterPassword" promptText="Passwort" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font size="20.0" />
                      </font>
-                  </TextField>
+                  </PasswordField>
                </children>
                <rowConstraints>
                   <RowConstraints percentHeight="0.0" />
